adj: remove mmkv